2008-02-18  Matthias Clasen  <mclasen@redhat.com>

	* clock.glade: Make all of the nested pref dialogs use the dialog
	window class, to avoid some focus and stacking order oddities with
	metacity.
	
2008-02-18  Matthias Clasen  <mclasen@redhat.com>

	Fix the time display in the location tiles to be the time at the 
	location (currently, all tiles show the local time, which is rather 
	pointless). Also fix the problem where the time is invisible for
	a while after the popup has been shown.

	This introduces some new strings (the strftime formats used for 
	formatting the time for the tiles), but there should be little
	need to translate them.

	* clock-location-tile.[hc]: Replace the need-formatted-time signal
	by a need-clock-format. Do our own time formatting, since the
	needs are somewhat different from the time display in the panel,
	and we really only want to respect the 12/24h preference.

	* clock.c: Handle the need-clock-format signal.

	* clock-marshallers.list: Add INT:VOID marshaller for the 
	need-clock-format signal.

2008-02-15  Matthias Clasen  <mclasen@redhat.com>

	* gweather-xml.c (find_weather_code): Remove a debug statement
	that can conceivably crash if the model is empty. Fix bug #510636.

==================== 2.21.91 ====================

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: tweak for distcheck...

2009-02-09  Matthias Clasen  <mclasen@redhat.com>
	
	* pixmaps/clock-map.png: png version of the world map that is
	10 times smaller than the svg.

	* pixmaps/Makefile.am: Install clock-map.png

	* clock-map.c: Load the map as png.

2008-02-09  Vincent Untz  <vuntz@gnome.org>

	Port to gio.
	Based on patch by Diego Escalante Urrelo <diegoe@gnome.org>
	Fix part of bug #509756.

	* clock-location.c: (monitor_etc_sysconfig_clock): updated for
	GFileMonitor changed signal
	(zone_from_etc_sysconfig_clock): use GFileMonitor
	(clock_location_finalize): free the monitor

==================== 2.21.90 ====================
